tests/fixtures/etsi.local-mec010-2_apppkgmgmt/expected/src/fern/errors/too_many_requests_error.py


import typing

from ..core.api_error import ApiError
from ..types.problem_details import ProblemDetails


class TooManyRequestsError(ApiError):
    def __init__(self, body: ProblemDetails, headers: typing.Optional[typing.Dict[str, str]] = None):
        super().__init__(status_code=429, headers=headers, body=body)
